functionality is complete

--- a/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
@@ -221,7 +221,7 @@
         <screens:Matches DataContext="{Binding MatchViewModel}"/>
       </Border>
       <Border BorderBrush="Transparent" Grid.Row="0" Grid.Column="0" Name="graphs" Opacity="0" IsVisible="False">
-        <screens:DataAnalysis DataContext="{Binding GraphViewModel}"/>
+        <screens:CreateGraph DataContext="{Binding CreateGraphViewModel}"/>
       </Border>
       <Border BorderBrush="Transparent" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Name="tba" Opacity="0" IsVisible="False">
         <screens:TheBlueAlliance DataContext="{Binding TBAViewModel}"/>
