--- a/LightMasterMVVM/LightMasterMVVM/Views/CreateGraph.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/CreateGraph.xaml
@@ -4,14 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="LightMasterMVVM.Views.CreateGraph">
-  <Grid ColumnDefinitions="500,200,200" RowDefinitions="620" HorizontalAlignment="Center">
+  <Grid ColumnDefinitions="500,200,200" RowDefinitions="820" HorizontalAlignment="Center">
     <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="0" Grid.Row="0" CornerRadius="4">
       <Grid ColumnDefinitions="*,*" Margin="10">
         <StackPanel Grid.Column="0" Margin="5,0">
           <TextBlock Text="Currently Tracking" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-          <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+          <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="740" Margin="0,5">
             <StackPanel>
-              <ItemsControl Items="{Binding TrackedBy}">
+              <ItemsControl Items="{Binding TrackBy}">
                 <ItemsControl.ItemTemplate>
                   <DataTemplate>
                     <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
@@ -53,7 +53,7 @@
         </StackPanel>
         <StackPanel Grid.Column="1" Margin="5,0">
           <TextBlock Text="Ordered By" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-          <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+          <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="740" Margin="0,5">
             <StackPanel>
               <ItemsControl Items="{Binding OrderedBy}">
                 <ItemsControl.ItemTemplate>
@@ -98,17 +98,32 @@
     </Border>
     <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="1" Grid.Row="0" CornerRadius="4">
       <StackPanel Margin="0,10">
-        <TextBlock Text="Ordering Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+        <TextBlock Text="Tracking Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
+        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="740" Margin="0,5">
           <StackPanel>
-            <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-              <Grid ColumnDefinitions="*,20">
-                <TextBlock Text="Inner PC" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold" Grid.Column="1"/>
-                
-              </Grid>
+            <ItemsControl Items="{Binding AllTrackOptions}">
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
+                    <Grid ColumnDefinitions="*,20">
+                      <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
+                      <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddTrackProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                        <Button.Template>
+                          <ControlTemplate TargetType="{x:Type Button}">
+                            <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
+                          </ControlTemplate>
+                        </Button.Template>
+                      </Button>
 
-            </Border>
+
+                    </Grid>
+
+                  </Border>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            
+            
           </StackPanel>
         </ScrollViewer>
       </StackPanel>
@@ -116,54 +131,30 @@
     <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="2" Grid.Row="0" CornerRadius="4">
       <StackPanel Margin="0,10">
         <TextBlock Text="Ordering Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="740" Margin="0,5">
           <StackPanel>
-            
-            <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-              <Grid ColumnDefinitions="*,20">
-                <TextBlock Text="Inner PC" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                <Button Grid.Column="1" Command="{Binding AddTrackProperty}" CommandParameter="Inner">
-                  <Button.Template>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                      <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
-                    </ControlTemplate>
-                  </Button.Template>
-                </Button>
-                
-                
-              </Grid>
 
-            </Border>
-            <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-              <Grid ColumnDefinitions="*,20">
-                <TextBlock Text="Outer PC" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                <Button Grid.Column="1" Command="{Binding AddOrderProperty}" CommandParameter="Outer">
-                  <Button.Template>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                      <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
-                    </ControlTemplate>
-                  </Button.Template>
-                </Button>
+            <ItemsControl Items="{Binding AllOrderOptions}">
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
+                    <Grid ColumnDefinitions="*,20">
+                      <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
+                      <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddOrderProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                        <Button.Template>
+                          <ControlTemplate TargetType="{x:Type Button}">
+                            <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
+                          </ControlTemplate>
+                        </Button.Template>
+                      </Button>
 
 
-              </Grid>
+                    </Grid>
 
-            </Border>
-            <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-              <Grid ColumnDefinitions="*,20">
-                <TextBlock Text="Lower PC" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                <Button Grid.Column="1" Command="{Binding AddOrderProperty}" CommandParameter="Lower">
-                  <Button.Template>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                      <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
-                    </ControlTemplate>
-                  </Button.Template>
-                </Button>
-
-
-              </Grid>
-
-            </Border>
+                  </Border>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
           </StackPanel>
         </ScrollViewer>
       </StackPanel>
